# discord-undoc.github.io

./: .gitignore  404.html  README.md  book.toml  deploy.sh  endpoint_list.py  generate.py  get_mdbook.py  get_theme.sh  github.html  index.html  pyproject.toml  searchindex.js  searchindex.json  server.html
.github/: CONTRIBUTING.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: publish-book.yaml
endpoints/: application.html  cdn.html  config.schema.json  config.yaml  endpoints.schema.json  endpoints_list.html  guild.html  user.html
endpoints/application/: app-directory.yaml  general.yaml  interactions.yaml  oauth.yaml  sdk-and-dispatch.yaml  store.yaml
endpoints/cdn/: application.yaml  group-dm-icon.yaml  guild-banner.yaml  guild-discovery-splash.yaml  guild-emoji.yaml  guild-event.yaml  guild-icon.yaml  guild-role.yaml  guild-splash.yaml  guild-sticker.yaml  guild-template.yaml  guild-user-avatar.yaml  guild-user-banner.yaml  guild.yaml  soundboard-sound.yaml  user-avatar-decoration.yaml  user-avatar.yaml  user-banner.yaml  user-video-filter.yaml  user.yaml
endpoints/guild/: analytics.yaml  auto-moderation.yaml  channels.yaml  discovery.yaml  emojis.yaml  general.yaml  home-feed.yaml  integrations.yaml  invites.yaml  members.yaml  membership-screening.yaml  moderation.yaml  (+11 more)
general/: api_wrappers.html  contribution.html  legal.html  resources.html
github/: theme.html  types.html
src/: 404.md  README.md  SUMMARY.md  apitypes.md  book_guide.md  endpoints_list.md  introduction.md  reference.md  resources.md  status_api.md
(+27 files in other folders)
